Add another “what I need” item

--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@ title: Vad behöver jag från min hemsida?
 <ul>
   <li>Tunn bloggmotor (Jekyll?)</li>
   <li>En “Om Mig”-sida</li>
+  <li>En CV-sida</li>
 </ul>
