Add ellipsis to “read more”… links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Senaste inläggen
     </blockquote>
     <p>
       <cite>
-        <a href="{{ post.url }}">Läs mer av “{{ post.title }}”</a>
+        <a href="{{ post.url }}">Läs mer av “{{ post.title }}”…</a>
       </cite>
     </p>
     {% else %}
