--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Senaste inläggen
 ---
 <section>
   {% for post in site.posts %}
-  <article>
+  <article class="{{ post.layout }}">
     <header>
       <h1>{{ post.title }}</h1>
       <p>
