--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ title: Senaste inläggen
     {% include index/quote.html %}
     {% elsif post.layout == "link" %}
     {% include index/link.html %}
+    {% elsif post.layout == "image" %}
+    {% include index/image.html %}
     {% endif %}
   </article>
   {% endfor %}
