--- a/about-me.html
+++ b/about-me.html
@@ -1,13 +1,47 @@
 ---
 layout: page
-title: Om Mig
+title: About Me
 date: 2010-11-14 13:52:46 CET
 ---
 <article class="about-me">
   <header>
     <h1>Kim Burgestrand</h1>
   </header>
-  <p>Idag ({{ site.time | date: &#8220;%Y-%m-%d&#8221; }}) har jag migrerat till ett nytt system för att driva hela min blogg. Med det planerar jag även att skriva om hela introduktionssidan om mig.</p>
+  <dl>
+  <dt><img alt='Me!' src='/images/me.jpg' /></dt>
   
-  <p>Tills det är gjort finns min äldre introduktionssida:<br /><a href='http://burgestrand.tumblr.com/post/252543664/kim-burgestrand-me'>http://burgestrand.tumblr.com/post/252543664/kim-burgestrand-me</a></p>
+  <dt>Likes</dt>
+  
+  <dd>readable <em>clean</em> code, learning, teaching</dd>
+  
+  <dt>Does</dt>
+  
+  <dd>web &amp; library development, martial arts, juggling, wakeboarding</dd>
+  
+  <dt>Exists</dt>
+  
+  <dd><a href='http://github.com/Burgestrand'>github</a>, <a href='http://twitter.com/Burgestrand'>twitter</a>, <a href='http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735'>phpportalen</a>, <a href='mailto:'>email</a></dd>
+  </dl>
+  <div class="clear"></div>
+  <p>I’m a Swedish programmer brought up on an island named <a href='http://bit.ly/aPtQxr'>Resarö</a> in the Stockholm archipelago. I currently live with my girlfriend in Gothenburg, where I study computer science at Gothenburg University.</p>
+  
+  <p>I love creating beautiful things using code, and here are some of my babies:</p>
+  
+  <dl>
+  <dt><a href='https://github.com/Burgestrand/Hallon'>Hallon</a></dt>
+  
+  <dd>Ruby bindings for the official <a href='http://spotify.com'>Spotify</a> API.</dd>
+  
+  <dt><a href='https://github.com/Burgestrand/Dimma'>Dimma</a></dt>
+  
+  <dd>A ruby library for the <a href='http://beaconpush.com/'>Beacon</a> REST API.</dd>
+  
+  <dt><a href='https://github.com/Burgestrand/vlad-nginx'>vlad-nginx</a></dt>
+  
+  <dd>NGiNX recipe for Vlad the Deployer.</dd>
+  
+  <dt><a href='http://beta.radiofy.se/'>radiofy.se</a> <small>(co-developer)</small></dt>
+  
+  <dd>A website built around a service where we aggregate data from Swedish radio stations and put their music into (automatically updated) Spotify playlists grouped by channel.</dd>
+  </dl>
 </article>
