Add RoR note on radiofy.se

--- a/about-me.html
+++ b/about-me.html
@@ -42,6 +42,6 @@ date: 2010-11-14 13:52:46 CET
   
   <dt><a href='http://beta.radiofy.se/'>radiofy.se</a> <small>(co-developer)</small></dt>
   
-  <dd>A website built around a service where we aggregate data from Swedish radio stations and put their music into (automatically updated) Spotify playlists grouped by channel.</dd>
+  <dd>A website built around a service where we aggregate data from Swedish radio stations and put their music into (automatically updated) Spotify playlists grouped by channel. <small>(built using ruby on rails)</small></dd>
   </dl>
 </article>
