--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
       //<![CDATA[
         var tumblr = document.getElementById("tumblr");
         var loc = window.location.pathname.toString();
-        tumblr.href = tumblr.href + loc;
+        tumblr.href = tumblr.href + loc.replace(/^\//, '');
         tumblr.innerHTML = tumblr.innerHTML + loc;
       //]]>
     </script>
