Add actual email to about-me page

--- a/about-me.html
+++ b/about-me.html
@@ -20,8 +20,15 @@ date: 2010-11-14 13:52:46 CET
   
   <dt>Exists</dt>
   
-  <dd><a href='http://github.com/Burgestrand'>github</a>, <a href='http://twitter.com/Burgestrand'>twitter</a>, <a href='http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735'>phpportalen</a>, <a href='mailto:'>email</a></dd>
+  <dd><a href='http://github.com/Burgestrand'>github</a>, <a href='http://twitter.com/Burgestrand'>twitter</a>, <a href='http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735'>phpportalen</a>, <a href='' id='email'>email</a></dd>
   </dl>
+  <script type="text/javascript">
+    //<![CDATA[
+      var prefix = "mailto:"
+      var at = "@"
+      document.getElementById("email").setAttribute("href", prefix + "kim" + at + "burgestrand.se")
+    //]]>
+  </script>
   <div class="clear"></div>
   <p>I’m a Swedish programmer brought up on an island named <a href='http://bit.ly/aPtQxr'>Resarö</a> in the Stockholm archipelago. I currently live with my girlfriend in Gothenburg, where I study computer science at Gothenburg University.</p>
   
