Use UTC instead of CET on About Me-page (old change)

--- a/about-me.html
+++ b/about-me.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-date: 2010-11-14 13:52:46 CET
+date: 2010-11-14 13:52:46 UTC
 ---
 <article class="about-me">
   <header>
