Rewrite about-me definition list using HAML instead of Markdown

--- a/about-me.html
+++ b/about-me.html
@@ -7,20 +7,19 @@ date: 2010-11-14 13:52:46 UTC
   <header>
     <h1>Kim Burgestrand</h1>
   </header>
+  <img alt="Me!" class="photo" src="/images/me.jpg">
   <dl>
-  <dt><img alt='Me!' src='/images/me.jpg' /></dt>
-  
-  <dt>Likes</dt>
-  
-  <dd>readable <em>clean</em> code, learning, teaching</dd>
-  
-  <dt>Does</dt>
-  
-  <dd>web &amp; library development, martial arts, juggling, wakeboarding</dd>
-  
-  <dt>Exists</dt>
-  
-  <dd><a href='http://github.com/Burgestrand'>github</a>, <a href='http://twitter.com/Burgestrand'>twitter</a>, <a href='http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735'>phpportalen</a>, <a href='' id='email'>email</a></dd>
+    <dt>Likes</dt>
+    <dd>readable <em>clean</em> code, learning, teaching</dd>
+    <dt>Does</dt>
+    <dd>web & library development, martial arts, juggling, wake-boarding</dd>
+    <dt>Exists</dt>
+    <dd>
+      <a href="http://github.com/Burgestrand">github</a>,
+      <a href="http://twitter.com/Burgestrand">twitter</a>,
+      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&u=9735">phpportalen</a>,
+      <a id="email">email</a>
+    </dd>
   </dl>
   <script type="text/javascript">
     //<![CDATA[
