Fix HTML entity failure in phpportalen link

--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@ date: 2010-11-14 13:52:46 UTC
     <dd>
       <a href="http://github.com/Burgestrand">github</a>,
       <a href="http://twitter.com/Burgestrand">twitter</a>,
-      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&u=9735">phpportalen</a>,
+      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735">phpportalen</a>,
       <a id="email">email</a>
     </dd>
   </dl>
