Adjust wording on About Me-page (should put a new pic up, too ¬¬)

--- a/about-me.html
+++ b/about-me.html
@@ -10,7 +10,7 @@ date: 2010-11-14 13:52:46 UTC
   <img alt="Me!" class="photo" src="/images/me.jpg">
   <dl>
     <dt>Likes</dt>
-    <dd>readable <em>clean</em> code, learning, teaching</dd>
+    <dd><em>beautiful</em> code, teaching, documentation</dd>
     <dt>Does</dt>
     <dd>web & library development, martial arts, juggling, wake-boarding</dd>
     <dt>Exists</dt>
@@ -31,7 +31,7 @@ date: 2010-11-14 13:52:46 UTC
   <div class="clear"></div>
   <p>I’m a Swedish programmer brought up on an island named <a href='http://bit.ly/aPtQxr'>Resarö</a> in the Stockholm archipelago. I currently live with my girlfriend in Gothenburg, where I study computer science at Gothenburg University.</p>
   
-  <p>I love creating beautiful things using code, and here are some of my babies:</p>
+  <p>I love creating sweet things using code, and here are some of my babies:</p>
   
   <dl>
   <dt><a href='https://github.com/Burgestrand/Hallon'>Hallon</a></dt>
