--- a/code/ruby-threadpool/index.html
+++ b/code/ruby-threadpool/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
-  <title>pool.rb</title>
+  <title>threadpool.rb</title>
   <link rel="stylesheet" href="http://github.com/jashkenas/docco/raw/0.3.0/resources/docco.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
   <table cellspacing=0 cellpadding=0>
   <thead>
     <tr>
-      <th class=docs><h1>pool.rb</h1></th>
+      <th class=docs><h1>threadpool.rb</h1></th>
       <th class=code></th>
     </tr>
   </thead>
