--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Latest posts
 ---
 <section>
   {% for post in site.posts %}
+  {% if post.draft == nil %}
   <article class="{{ post.layout }}">
     {% if post.layout == "post" %}
     {% include index/post.html %}
@@ -15,5 +16,6 @@ title: Latest posts
     {% include index/image.html %}
     {% endif %}
   </article>
+  {% endif %}
   {% endfor %}
 </section>
