Update the picture on About Me-page to use my gravatar

--- a/about-me.html
+++ b/about-me.html
@@ -7,7 +7,7 @@ date: 2010-11-14 13:52:46 UTC
   <header>
     <h1>Kim Burgestrand</h1>
   </header>
-  <img alt="Me!" class="photo" src="/images/me.jpg">
+  <img alt="Me!" class="photo" src="http://www.gravatar.com/avatar/b67b73b5b1fd84119ec788b1c3df02ad.png?s=234" width="234">
   <dl>
     <dt>Likes</dt>
     <dd><em>beautiful</em> code, teaching, documentation</dd>
