Remove phpportalen link from About Me-page

--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,6 @@ date: 2010-11-14 13:52:46 UTC
     <dd>
       <a href="http://github.com/Burgestrand">github</a>,
       <a href="http://twitter.com/Burgestrand">twitter</a>,
-      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735">phpportalen</a>,
       <a id="email">email</a>
     </dd>
   </dl>
@@ -25,7 +24,8 @@ date: 2010-11-14 13:52:46 UTC
     //<![CDATA[
       var prefix = "mailto:"
       var at = "@"
-      document.getElementById("email").setAttribute("href", prefix + "kim" + at + "burgestrand.se")
+      var mail = document.getElementById("email")
+      email.setAttribute("href", prefix + "kim" + at + "burgestrand.se")
     //]]>
   </script>
   <div class="clear"></div>
