--- a/about-me.html
+++ b/about-me.html
@@ -29,9 +29,9 @@ date: 2010-11-14 13:52:46 UTC
     //]]>
   </script>
   <div class="clear"></div>
-  <p>I’m a Swedish programmer brought up on an island named <a href='http://bit.ly/aPtQxr'>Resarö</a> in the Stockholm archipelago. I currently live with my girlfriend in Gothenburg, where I study computer science at Gothenburg University.</p>
+  <p>I’m a Swedish developer, brought up on an island named <a href='http://bit.ly/aPtQxr'>Resarö</a> in the Stockholm archipelago. I currently live with my girlfriend Elin in Gothenburg, where I work at this awesome lil&#8217; place called <a href='http://elabs.se/'>Elabs</a>.</p>
   
-  <p>I love creating sweet things using code, and here are some of my babies:</p>
+  <p>I try to avoid defining myself as a programmer. I do enjoy creating things, and code just happens to be one of the ways I do it with. Here’s some cody thingies I’ve made:</p>
   
   <dl>
   <dt><a href='https://github.com/Burgestrand/Hallon'>Hallon</a></dt>
