--- a/code/ruby-thread-pool/index.html
+++ b/code/ruby-thread-pool/index.html
@@ -329,12 +329,42 @@ to finish before the other one.</li>
 <li>Finally, register an <code>at_exit</code>-hook that will wait for our thread pool
 to properly shut down before allowing our script to completely exit.</li>
 </ul>
-
-
       </td>
       <td class=code>
         <div class='highlight'><pre>  <span class="nb">at_exit</span> <span class="p">{</span> <span class="nb">p</span><span class="o">.</span><span class="n">shutdown</span> <span class="p">}</span>
 <span class="k">end</span></pre></div>
+      </td>
+    </tr>
+    <tr id='section-License_(X11_License)'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-License_(X11_License)">&#182;</a>
+        </div>
+        <h1>License (X11 License)</h1>
+
+<p>Copyright &copy; 2012, Kim Burgestrand <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#x6b;&#105;&#x6d;&#64;&#98;&#x75;&#114;&#103;&#101;&#115;&#116;&#114;&#x61;&#x6e;&#x64;&#46;&#115;&#x65;">&#107;&#x69;&#109;&#x40;&#98;&#x75;&#x72;&#x67;&#101;&#115;&#116;&#x72;&#x61;&#x6e;&#x64;&#46;&#x73;&#x65;</a></p>
+
+<p>Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the &ldquo;Software&rdquo;), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:</p>
+
+<p>The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.</p>
+
+<p>THE SOFTWARE IS PROVIDED &ldquo;AS IS&rdquo;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.</p>
+
+      </td>
+      <td class=code>
+        <div class='highlight'><pre></pre></div>
       </td>
     </tr>
   </table>
