Update projects on about-me page

--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,7 @@ date: 2010-11-14 13:52:46 UTC
       <a id="email">email</a>
     </dd>
   </dl>
-  <script type="text/javascript">
+  <script>
     //<![CDATA[
       var prefix = "mailto:"
       var at = "@"
@@ -34,19 +34,19 @@ date: 2010-11-14 13:52:46 UTC
   <p>I try to avoid defining myself as a programmer. I do enjoy creating things, and code just happens to be one of the ways I do it with. Here’s some cody thingies I’ve made:</p>
   
   <dl>
-  <dt><a href='https://github.com/Burgestrand/Hallon'>Hallon</a></dt>
+  <dt><a href='https://github.com/Burgestrand/spotify'>Spotify</a></dt>
   
-  <dd>Ruby bindings for the official <a href='http://spotify.com'>Spotify</a> API.</dd>
+  <dd>Ruby bindings for the official <a href='http://spotify.com'>Spotify</a> C API, libspotify.</dd>
   
-  <dt><a href='https://github.com/Burgestrand/Dimma'>Dimma</a></dt>
+  <dt><a href='https://github.com/Burgestrand/ruhue'>Ruhue</a></dt>
   
-  <dd>A ruby library for the <a href='http://beaconpush.com/'>Beacon</a> REST API.</dd>
+  <dd>Ruby library for interacting with the reverse-engineered <a href='http://meethue.com/'>Philips Hue</a> Hub HTTP API.</dd>
   
-  <dt><a href='https://github.com/Burgestrand/vlad-nginx'>vlad-nginx</a></dt>
+  <dt><a href='https://burgestrand.github.com/hue-api/'>Hue API</a></dt>
   
-  <dd>NGiNX recipe for Vlad the Deployer.</dd>
+  <dd>An effort to reverse-engineer and document the HTTP API of the <a href='http://meethue.com/'>Philips Hue</a> Hub.</dd>
   
-  <dt><a href='http://beta.radiofy.se/'>radiofy.se</a> <small>(co-developer)</small></dt>
+  <dt><a href='http://beta.radiofy.se/'>radiofy.se</a> <small>(co-developer for nearly two years)</small></dt>
   
   <dd>A website built around a service where we aggregate data from Swedish radio stations and put their music into (automatically updated) Spotify playlists grouped by channel. <small>(built using ruby on rails)</small></dd>
   </dl>
