Fix link to Hue API (burgestrand.se no likey HTTPS)

--- a/about-me.html
+++ b/about-me.html
@@ -42,7 +42,7 @@ date: 2010-11-14 13:52:46 UTC
   
   <dd>Ruby library for interacting with the reverse-engineered <a href='http://meethue.com/'>Philips Hue</a> Hub HTTP API.</dd>
   
-  <dt><a href='https://burgestrand.github.com/hue-api/'>Hue API</a></dt>
+  <dt><a href='http://burgestrand.github.com/hue-api/'>Hue API</a></dt>
   
   <dd>An effort to reverse-engineer and document the HTTP API of the <a href='http://meethue.com/'>Philips Hue</a> Hub.</dd>
   
