--- a/404.html
+++ b/404.html
@@ -10,12 +10,12 @@
     <p>
       I couldn't find the page you were looking for. Some links have moved recently,
       so you might have better luck changing the URL to
-      <a href="http://burgestrand.se/" id="url">burgestrand.se/articles/&lt;post title></a>
+      <a href="http://www.burgestrand.se/" id="url">www.burgestrand.se/articles/&lt;post title></a>
     </p>
     <h2>Still can’t find it?</h2>
     <p>
       Then it’s likely that it has vanished into oblivion and will never be found.
-      My main page still remains at <a href="http://burgestrand.se/">burgestrand.se/</a>
+      My main page still remains at <a href="http://www.burgestrand.se/">www.burgestrand.se/</a>
       though, so all is not lost.
     </p>
     <script>
@@ -23,7 +23,7 @@
         var article = document.getElementById("url");
         var loc     = window.location.pathname.toString();
         var title   = loc.substr(loc.lastIndexOf('/') + 1);
-        var url     = "http://burgestrand.se/articles/" + title;
+        var url     = "http://www.burgestrand.se/articles/" + title;
         article.href = url;
         article.innerHTML = url;
       //]]>
@@ -34,7 +34,7 @@
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-25095095-1']);
         _gaq.push(['_trackPageview']);
-        
+
         (function() {
           var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
           ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
