Fix ruby thread pool code example.

--- a/code/ruby-thread-pool/index.html
+++ b/code/ruby-thread-pool/index.html
@@ -2,8 +2,20 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
-  <title>Ruby Thread Pool</title>
-  <link rel="stylesheet" href="http://jashkenas.github.com/docco/resources/docco.css">
+  <title>thread-pool.rb</title>
+  <link rel="stylesheet" href="./parallel.css">
+  <style>
+    .docs {
+      box-sizing: border-box;
+      width: 525px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .code {
+      padding-left: 10px;
+    }
+  </style>
 </head>
 <body>
 <div id='container'>
@@ -342,7 +354,7 @@ to properly shut down before allowing our script to completely exit.</li>
         </div>
         <h1>License (X11 License)</h1>
 
-<p>Copyright &copy; 2012, Kim Burgestrand <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#x6b;&#105;&#x6d;&#64;&#98;&#x75;&#114;&#103;&#101;&#115;&#116;&#114;&#x61;&#x6e;&#x64;&#46;&#115;&#x65;">&#107;&#x69;&#109;&#x40;&#98;&#x75;&#x72;&#x67;&#101;&#115;&#116;&#x72;&#x61;&#x6e;&#x64;&#46;&#x73;&#x65;</a></p>
+<p>Copyright &copy; 2012, Kim Burgestrand <a href="mailto:kim@burgestrand.se">kim@burgestrand.se</a></p>
 
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &ldquo;Software&rdquo;), to deal
