Add pygments css to ruby thread pool

--- a/code/ruby-thread-pool/index.html
+++ b/code/ruby-thread-pool/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
   <title>thread-pool.rb</title>
+  <link rel="stylesheet" href="./pygments.css">
   <link rel="stylesheet" href="./parallel.css">
   <style>
     .docs {
