--- a/about-me.html
+++ b/about-me.html
@@ -9,10 +9,8 @@ date: 2010-11-14 13:52:46 UTC
   </header>
   <img alt="Me!" class="photo" src="http://www.gravatar.com/avatar/b67b73b5b1fd84119ec788b1c3df02ad.png?s=234" width="234">
   <dl>
-    <dt>Likes</dt>
-    <dd><em>beautiful</em> code, teaching, documentation</dd>
-    <dt>Does</dt>
-    <dd>web & library development, martial arts, juggling, wake-boarding</dd>
+    <dt>Enjoys</dt>
+    <dd>software development, martial arts, juggling, wake- &amp; snowboarding</dd>
     <dt>Exists</dt>
     <dd>
       <a href="http://github.com/Burgestrand">github</a>,
@@ -29,24 +27,24 @@ date: 2010-11-14 13:52:46 UTC
   </script>
   <div class="clear"></div>
   <p>I’m a Swedish developer, brought up on an island named <a href='http://bit.ly/aPtQxr'>Resarö</a> in the Stockholm archipelago. I currently live with my girlfriend Elin in Gothenburg, where I work at this awesome lil&#8217; place called <a href='http://elabs.se/'>Elabs</a>.</p>
-  
-  <p>I try to avoid defining myself as a programmer. I do enjoy creating things, and code just happens to be one of the ways I do it with. Here’s some cody thingies I’ve made:</p>
-  
+
+  <p>Here are some things I've made:</p>
+
   <dl>
   <dt><a href='https://github.com/Burgestrand/spotify'>Spotify</a></dt>
-  
+
   <dd>Ruby bindings for the official <a href='http://spotify.com'>Spotify</a> C API, libspotify.</dd>
-  
+
   <dt><a href='https://github.com/Burgestrand/ruhue'>Ruhue</a></dt>
-  
+
   <dd>Ruby library for interacting with the reverse-engineered <a href='http://meethue.com/'>Philips Hue</a> Hub HTTP API.</dd>
-  
+
   <dt><a href='http://burgestrand.github.com/hue-api/'>Hue API</a></dt>
-  
+
   <dd>An effort to reverse-engineer and document the HTTP API of the <a href='http://meethue.com/'>Philips Hue</a> Hub.</dd>
-  
+
   <dt><a href='http://beta.radiofy.se/'>radiofy.se</a> <small>(co-developer for nearly two years)</small></dt>
-  
+
   <dd>A website built around a service where we aggregate data from Swedish radio stations and put their music into (automatically updated) Spotify playlists grouped by channel. <small>(built using ruby on rails)</small></dd>
   </dl>
 </article>
