Some more cleanup of vars and links.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 ---
-title: About
+title: About me
 layout: page
-permalink: /about/index.html
 ---
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
