s/because/since/ since it feels more in line with the design.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ layout: page
   I’m a Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
   For almost five years I worked in Gothenburg at a little place called
   <a href="http://elabs.se/">Elabs</a>, but in 2016 I decided to move back to
-  Stockholm because I missed my friends &amp; family.
+  Stockholm since I missed my friends &amp; family.
 </p>
 
 <p>
