Polish up the about-me text.

--- a/about.html
+++ b/about.html
@@ -5,14 +5,11 @@ layout: page
 
 <p>
   I’m a Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
-  For almost five years I worked in Gothenburg at a little place called
-  <a href="http://elabs.se/">Elabs</a>, but in 2016 I decided to move back to
-  Stockholm since I missed my friends &amp; family.
-</p>
+  My history includes a small detour to meet my spouse Elin in Jönköping, Computer Science at
+  Gothenburg University, and roughly five years as a developer at <a href="http://elabs.se/">Elabs</a>.
 
 <p>
-  My girlfriend Elin and I now live happily in Stockholm, out in the
-  woods in Blackeberg. I still work as a developer, and quite enjoy
-  it. Whenever I can I will wakeboard, snowboard, play computer games,
-  and juggle — however not at the same time.
+  Today Elin and I live happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>, Stockholm.
+  I still work as a developer (now with <a href="https://sqore.com/">Sqore</a>) and whenever I can I will wakeboard, snowboard,
+  play computer games, and juggle — however not at all the same time.
 </p>
