Universities were short and sweet, but not major

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -4,9 +4,9 @@ layout: page
 ---
 
 <p>
-  I’m a Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
-  My history includes a small detour to meet my spouse Elin in Jönköping, Computer Science at
-  Gothenburg University, and roughly five years as a developer at <a href="http://elabs.se/">Elabs</a>.
+  I’m a self-taught Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
+  My history includes a small detour to meet my spouse Elin in Jönköping, a flyby of Jönköping University, a short pit stop at Gothenburg University, and roughly five years as a developer at <a href="http://elabs.se/">Elabs</a>.
+</p>
 
 <p>
   Today Elin and I live happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>, Stockholm.
