Update about-me with why we moved to Stockholm

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -5,11 +5,11 @@ layout: page
 
 <p>
   I’m a self-taught Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
-  My history includes a small detour to meet my spouse Elin in Jönköping, a flyby of Jönköping University, a short pit stop at Gothenburg University, and roughly five years as a developer at <a href="http://elabs.se/">Elabs</a>.
+  My history includes a small detour to meet my spouse Elin in Jönköping, a flyby of Jönköping University, a short pit stop at Gothenburg University, and roughly five years as a developer at <a href="https://www.varvet.com/">Elabs (Varvet since 2016)</a>.
 </p>
 
 <p>
-  Today Elin and I live happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>, Stockholm.
-  I still work as a developer (now with <a href="https://sqore.com/">Sqore</a>) and whenever I can I will wakeboard, snowboard,
-  play computer games, and juggle — however not at all the same time.
+  In 2016 Elin and I moved to Stockholm to get closer to family. Today we live happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>, Stockholm.
+  I continue to work as a developer, and whenever I can I will wakeboard, snowboard,
+  play computer games, and juggle.
 </p>
