Update about-me wording, add short note about startup

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -5,11 +5,11 @@ layout: page
 
 <p>
   I’m a self-taught Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
-  My history includes a small detour to meet my spouse Elin in Jönköping, a flyby of Jönköping University, a short pit stop at Gothenburg University, and roughly five years as a developer at <a href="https://www.varvet.com/">Elabs (Varvet since 2016)</a>.
+  My history includes a short visit to Jönköping University where I met my partner Elin, a pit stop at Gothenburg University, and then roughly five years as a developer at <a href="https://www.varvet.com/">Elabs (Varvet since 2016)</a>.
 </p>
 
 <p>
   In 2016 Elin and I moved to Stockholm to get closer to family. Today we live happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>, Stockholm.
-  I continue to work as a developer, and whenever I can I will wakeboard, snowboard,
+  I continue to work as a developer and founder of a small consumer-app company; and whenever I can I will wakeboard, snowboard,
   play computer games, and juggle.
 </p>
