Site-wide styling update, and pagination implemented.

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -3,7 +3,8 @@ title: About me
 layout: page
 ---
 
-<article id="content">
+<article>
+  <a id="content"></a>
   <p>
     I’m a self-taught Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
     My history includes a short visit to Jönköping University where I met my partner Elin, a pit stop at Gothenburg University, and then roughly five years as a developer at <a href="https://www.varvet.com/">Elabs (Varvet since 2016)</a>.
