--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 ---
-layout: default
+layout: page
 title: Home
+class: home
 ---
-
-{% include layout/header.html %}
-
-{% include layout/footer.html %}
