--- a/about-me/index.html
+++ b/about-me/index.html
@@ -6,13 +6,18 @@ layout: page
 <article>
   <a id="content"></a>
   <p>
-    I’m a self-taught Swedish developer, brought up on an island named <a href="http://bit.ly/aPtQxr">Resarö</a> in the Stockholm archipelago.
+    I’m a self-taught Swedish developer and grew up on an island named <a href="http://maps.apple.com/?address=Resarö,+Vaxholm,+Sweden&t=m">Resarö</a> in the Stockholm archipelago.
     My history includes a short visit to Jönköping University where I met my partner Elin, a pit stop at Gothenburg University, and then roughly five years as a developer at <a href="https://www.varvet.com/">Elabs (Varvet since 2016)</a>.
   </p>
 
   <p>
-    In 2016 Elin and I moved to Stockholm to get closer to family. Today we live happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>, Stockholm.
-    I continue to work as a developer and founder of a small consumer-app company; and whenever I can I will wakeboard, snowboard,
-    play computer games, and juggle.
+    In 2016, Elin and I moved to Stockholm to get closer to family. For a
+    while we lived happily out in the woods of <a href="https://en.wikipedia.org/wiki/Let_the_Right_One_In_(novel)">Blackeberg</a>,
+    but in the summer of 2019 we packed our things and moved out into the archipelago again, to <a href="http://maps.apple.com/?address=Rindö,+Vaxholm,+Sweden&t=m">Rindö</a>.
+  </p>
+  <p>
+    I continue to work as a developer, and today I am a co-founder of a tiny
+    consumer-app startup. Other than that I wakeboard, snowboard, play
+    computer games, and juggle. I'm also a dad.
   </p>
 </article>
