New me! Hello Varvet.

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -16,8 +16,12 @@ layout: page
     but in the summer of 2019 we packed our things and moved out into the archipelago again, to <a href="http://maps.apple.com/?address=Rindö,+Vaxholm,+Sweden&t=m">Rindö</a>.
   </p>
   <p>
-    I continue to work as a developer, and today I am a co-founder of a tiny
-    consumer-app startup. Other than that I wakeboard, snowboard, play
-    computer games, and juggle. I'm also a dad.
+    I continue to work as a developer, and today I am a co-founder &amp; partner of a small
+    digital agency named <a href="https://www.varvet.com">Varvet</a>. Other than that I enjoy
+    a multitude of things such as computer games, board games, woodworking, horse riding, martial arts,
+    snowboarding, wakeboarding, juggling, and so on.
+  </p>
+  <p>
+    I'm also a dad. Together we explore the wonderful world we live in.
   </p>
 </article>
