Remove that last one. Dont like it.

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -19,9 +19,9 @@ layout: page
     I continue to work as a developer, and today I am a co-founder &amp; partner of a small
     digital agency named <a href="https://www.varvet.com">Varvet</a>. Other than that I enjoy
     a multitude of things such as computer games, board games, woodworking, horse riding, martial arts,
-    snowboarding, wakeboarding, juggling, and so on.
+    snowboarding, wakeboarding, juggling, hobby electronics, and so on.
   </p>
   <p>
-    I'm also a dad. Together we explore the wonderful world we live in.
+    I'm also a dad.
   </p>
 </article>
